# pytest-rerunclassfailures

./: .codacy.yml  .flake8  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  mypy.ini  pull_request_template.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: linters.yml  master_linters.yml  master_tests.yml  tests.yml
src/pytest-rerunclassfailures/: pytest_rerunclassfailures.py
src/pytest_rerunclassfailures/: pytest_rerunclassfailures.py  requirements.txt
tests/: conftest.py  test_arguments.py  test_class_arguments.py  test_class_attributes.py  test_class_basic.py  test_fail_fast.py  test_failure_stages.py  test_format_hadling.py  test_format_handling.py  test_ordering.py  test_rerun_different_length.py  test_rerunfailures.py  test_statuses.py  test_units_rest.py  test_xdist.py  type_check.py
tests/_cov_bootstrap/: sitecustomize.py
tests/test_source/: test_always_fails.py  test_always_pass.py  test_basic.py  test_class_fixture_attributes.py  test_class_fixture_dependency_chain.py  test_class_fixture_teardown_side_effects.py  test_class_with_no_class.py  test_dict_attributes.py  test_different_statuses.py  test_ext_function_fixture_attributes.py  test_failed_on_first_run.py  test_failed_on_second_run.py  test_function_attributes.py  test_function_attributes_as_fixtures.py  test_function_fixture_attributes.py  test_lazy_class_attribute_corruption.py  test_list_attributes.py  test_no_class.py  test_non_init_attributes.py  test_run_order_both.py  test_run_order_order.py  test_run_order_ordering.py  test_same_class_1.py  test_same_class_2.py  test_same_class_in_module.py  test_same_test_in_class.py  test_several_classes_in_module.py  test_stages_call.py  test_stages_class_setup_failure.py  test_stages_module_setup_failure.py  test_stages_session_setup_failure.py  test_stages_setup.py  test_stages_teardown_class.py  test_stages_teardown_class_pure.py  test_stages_teardown_func.py  test_unpickleable_attributes.py
tests/test_source/rerunfailures_scenario/: conftest.py  test_rerunfailures_conflict.py
