[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
src-dir = "src"

[tool.hatch.build.targets.sdist]
src-dir = "src"

[project]
name = "pytest-rerunclassfailures"
version = "0.2.0"
keywords = ["pytest", "pytest-rerunclassfailures", "pytest-plugin", "testing", "qa", "failures", "flacky"]
authors = [
  { name="Iliya Vereshchagin", email="i.vereshchagin@gmail.com" },
]
maintainers = [
  { name="Iliya Vereshchagin", email="i.vereshchagin@gmail.com" },
]
description = "pytest rerun class failures plugin"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
dependencies = [
    'pydantic>=2,<3',
    'pytest>=7.2'
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
    "Environment :: Plugins",
    "Framework :: Pytest",
    "Development Status :: 5 - Production/Stable",

]

install_requires = [
    'pytest>=7.2',
    'pydantic>=2,<3'
]

[project.urls]
"Homepage" = "https://github.com/wwakabobik/pytest-rerunclassfailures"
"Bug Tracker" = "https://github.com/wwakabobik/pytest-rerunclassfailures/issues"


[project.entry-points.pytest11]
pytest_rerunclassfailures = "pytest_rerunclassfailures.pytest_rerunclassfailures"


[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
max-name-length = 60
max-module-members = 15
extend-ignore = """
    Q000,
    WPS306,
    I001,
    I005,
    WPS229,
    D400,
    WPS317,
    S101,
    WPS507,
    DAR101,
    DAR201,
    WPS112,
    F401,
    WPS300,
    WPS412,
    DAR301,
    D401,
    D205,
    WPS615,
    I004,
    WPS110,
    WPS420,
    C812,
    WPS404,
    WPS221,
    WPS305,
    WPS323,
    WPS204,
    WPS226,
    WPS220,
    WPS214,
    WPS217,
    WPS210,
    WPS111,
    WPS213,
    WPS211,
    WPS231,
    S311,
"""

[tool.pylint]
max-line-length = 120

[tool.pytest.ini_options]
norecursedirs = ["tests/test_source"]

[tool.coverage.run]
source = ["src/pytest_rerunclassfailures"]
parallel = true
relative_files = true