[metadata]
name = pytest-rerunclassfailures
version = attr: pytest-rerunclassfailures.0.0.4
author = Iliya Vereshchagin
author_email = i.vereshchagin@gmail.com
maintainer = Iliya Vereshchagin
maintainer_email = i.vereshchagin@gmail.com
url = https://github.com/wwakabobik/pytest-rerunclassfailures
description = pytest rerun class failures plugin
long_description = file: README.md
long_description_content_type = text/markdown
keywords = "pytest, pytest-rerunclassfailures, pytest-plugin, testing, failures, flacky"
license = MIT License
python_requires = >=3.8
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8,
    Programming Language :: Python :: 3.9,
    Programming Language :: Python :: 3.10,
    Programming Language :: Python :: 3.11,
    Programming Language :: Python :: 3.12,
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Quality Assurance
    Topic :: Utilities
    Environment :: Plugins
    Framework :: Pytest
    Development Status :: 5 - Production/Stable

[options]
install_requires =
    pytest>=7.2
    pydantic

[options.package_data]
* = README.md

[flake8]
max-line-length = 120
max-name-length = 60
max-module-members = 15
extend-ignore = Q000,WPS306,I001,I005,WPS229,D400,WPS317,S101,WPS507,DAR201,DAR101,WPS112,F401,WPS300,WPS412,DAR301,D401,D205,WPS615,I004,WPS110,WPS420,C812,WPS404,WPS221,WPS305,WPS323,WPS204,WPS226,WPS220,WPS214,WPS217,WPS210,WPS111,WPS213,WPS211,WPS231,S311
